--- a/apps/host/index.html
+++ b/apps/host/index.html
@@ -1,7 +1,12 @@
-<!doctype html><html lang="es"><head>
-<meta charset="utf-8"/><meta name="viewport" content="width=device-width, initial-scale=1"/>
-<title>Ralph Studio — Portfolio</title>
-</head><body>
-<host-app></host-app>
-<script type="module" src="/src/main.ts"></script>
-</body></html>
+<!doctype html>
+<html lang="es">
+  <head>
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <title>Ralph Studio — Portfolio</title>
+  </head>
+  <body>
+    <host-app></host-app>
+    <script type="module" src="/src/main.ts"></script>
+  </body>
+</html>
